# basic-grpc-service-rust

./: Cargo.toml  build.rs  readme.md
certs/: local.crt  local.key
proto/basic/service/v1/: service.proto
proto/basic/v1/: basic.proto
proto/io/cloudevents/v1/: cloudevents.proto
public/: index.html
src/: lib.rs  main.rs  utils.rs
src/sdk/: basic.service.v1.rs  basic.v1.rs  io.cloudevents.v1.rs
src/talk/: globals.rs  mod.rs  talk.rs  types.rs
